[gd_scene load_steps=8 format=2]

[ext_resource path="res://dodge_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scene/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=4]
action = "ui_select"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="scoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="messageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -199.5
margin_top = -85.5
margin_right = 199.5
margin_bottom = 85.5
custom_fonts/font = SubResource( 2 )
text = "Dodge and survive the monsters attack"
align = 1
valign = 1
autowrap = true

[node name="messageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="startButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -70.0
margin_top = -246.0
margin_right = 70.0
margin_bottom = -190.0
custom_fonts/font = SubResource( 3 )
shortcut = SubResource( 5 )
text = "Start"

[connection signal="timeout" from="messageTimer" to="." method="_on_messageTimer_timeout"]
[connection signal="pressed" from="startButton" to="." method="_on_startButton_pressed"]
